2009-06-27

  Button bugfix. [Mion]


2009-06-23

  Changed "wait" command to do an actual timed wait even in ctrl/skip mode,
  just for a reduced duration.
  Added command "savedir". [Mion]


2009-06-21

  Fix for rain effect on PPC.
  Added Altivec graphics routines.
  Added SSE2 alphablend graphics routine. [Mion]


2009-06-17

  Fix for PPC ogg file playback (with bgm volume < 100). [Mion]


2009-06-14

  Moved SSE2/MMX graphics routines to separate files.
  Various bugfixes, mainly a syntax fix to disallow numerals
  after the * in label names (as it should). [Mion]


2009-06-11

  Added SSE2/MMX graphics routines and removed sdl_gfx library.
  Added additive and subtractive alpha blending modes.
  Added commands "lsp2add", "lsph2add", "lsp2sub", "lsph2sub". [Mion]


2009-06-09

  Bugfixes; added support for sdl_gfx library.
  Also experimental graphics routines using SSE2 (thanks Roto). [Mion]


2009-05-29

  Added commands "menu_click_def", "menu_click_page", "minimizewindow",
  "strsph", "textspeeddefault"; bugfix for Mac text output. [Mion]


2009-04-27

  Support for opening non-ASCII Japanese filenames in Windows,
  even without Japanese locale. [Mion]


2009-04-19

  Fully-functional "movie" command, including async & pos options.
  May be buggy. [Mion]


2009-04-17

  Incorporated insani's suggested "chvol" fix, redid "mp3fadeout",
  added "mp3fadein", "bgmfadeout", "bgmfadein" commands.
  Also various sound/music bugfixes. [Mion]


2009-04-15

  Incorporated changes from official onscripter-20090331. [Mion]


2009-04-14

  Corrected previously-fixed bugs reintroduced by the merge. [Mion]


2009-04-11

  Merged changes from experimental-effects branch: [Mion]
    * Emulate "trvswave", "whirl", "breakup" dll-based effects
    * Add support for effect layers: "setlayer", "layermessage" commands
    * Emulate "oldmovie", "snow", "hana" dll-based Layer effects
    * Add test scripts and images for testing dll-based emulations